--- a/your-code/bonus.ipynb
+++ b/your-code/bonus.ipynb
@@ -21,19 +21,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your command here"
+    "import pandas as pd\n",
+    "import requests\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import re"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pol, please enter your token here:········\n"
+     ]
+    }
+   ],
+   "source": [
+    "import getpass\n",
+    "# To keep your token secured\n",
+    "username = 'lorentepol'\n",
+    "token = getpass.getpass(prompt='Pol, please enter your token here:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://api.github.com/repos/lorentepol/test_API/contents/new_text.txt'\n",
+    "payload = {}\n",
+    "headers= {}\n",
+    "\n",
+    "response_commits = requests.request(\"PUT\", url, auth=(username, token), params= {'message': 'New txt file created through API',\n",
+    "                                                                                'content': 'This is a new txt file with this content created through API.'}, \n",
+    "                                    headers=headers, data = payload)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [400]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_commits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack-3.7",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ironhack-3.7"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -45,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
